Fri Jun 15 16:30:19 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Endings.cc (getWords): Undid change introduced in 3.1.3,
	in part. It now gets permutations of word whether or not it has
	a root, but it also gets permutations of one or more roots that
	the word has, based on a suggestion by Alexander Lebedev.
	* htfuzzy/EndingsDB.cc (createRoot): Fixed to handle words that have
	more than one root.
	* installdir/english.0: Removed P flag from wit, like and high, so
	they're not treated as roots of witness, likeness and highness, which
	are already in the dictionary.

Thu Jun  7 17:09:46 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: Add new attribute use_doc_date to use
	document meta information for the DocTime() field.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Document it.
	* htdig/HTML.cc(do_tag): Call Retriever::got_time if use_doc_date
	is set and we run across a META date tag.
	* htdig/Retriever.h, htdig/Retriver.cc: Add new got_date
	function. When called, sets the DocTime field of the DocumentRef
	after parsing is completed. Currently assumes ISO 8601 format for
	the date tag.

Thu Jun  7 16:48:13 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: Add new attribute any_keywords to allow
	ORing of keywords input parameter.
	* htsearch/htsearch.cc (addRequiredWords): Use it.  Fix handling
	of empty search word list.
	* htsearch/Display.cc (excerpt, highlight): Fix handling of case
	where "words" is empty but "keywords" isn't.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Document any_keywords.

Thu Jun  7 16:34:41 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: Add new attribute plural_suffix to set the
	language-dependent suffix for PLURAL_MATCHES contributed by Jesse.
	* htsearch/Display.cc (setVariables): Use it.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Document it.
